--- a/index.html
+++ b/index.html
@@ -63,17 +63,20 @@
 
 USER EXPERIENCE<br />
 <a href="waygo-a.html">Waygo</a> <br/>
+       <a href="acssa.html">Alameda County Social Services Portal</a> <br/>
+       <a href="streetalk.html">StreeTalk: Public Installation in Palo Alto</a> <br/>
 <a href="fernweh.html">Fernweh</a><br />
-        <a href="streetalk.html">StreeTalk: Public Installation in Palo Alto</a> <br/>
+ 
 
 
 <br />
         WEB EXPERIMENTAL<br />
-            <a href="noguchi.html">Noguchi's Playscapes Web</a> <br />
+            <a href="noguchi.html">Noguchi's Playscapes for SFMOMA</a> <br />
+                    <a href="watching.html">Watching: Designing for Surveillance</a> <br />
+          <a href="https://hosting-ivn.github.io/tiiime/">Tiiime: Typographic Clock</a> <br />
         <a href="super.html">SuperSuper: Modular Generated Typeface</a> <br />
 
-        <a href="watching.html">Watching: Designing for Surveillance</a> <br />
-          <a href="https://hosting-ivn.github.io/tiiime/">Tiiime: Typographic Clock</a> <br />
+
           <a href="cryptography.html">Cryptography 001 Publication</a> <br /><br />
           OTHER<br />
           <a href="renders.html">Various 3D renderings / animations</a> <br />
