--- a/noguchi.html
+++ b/noguchi.html
@@ -52,7 +52,7 @@
         <br/>
         Exhibition Site <br />
         <br/>
-
+ <a href="https://hosting-ivan.github.io/noguchis-playscapes-sfmoma/">Visit the site</a><br/><br/>
         <p>
           Noguchi's Playscapes is an experimental exhibition site that seeks to explore the vast and varied spaces on the net. The project examines the web's different dimensions, from the flat surface of websites to the immersive experience of virtual reality spaces. The website allows visitors to navigate and interact with a range of digital environments and discover new ways of experiencing and engaging with the net.
 <br><br>
