--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
     href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.95em' font-size='80'>🌎</text></svg>"
   />
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="index-style.css" />
 
@@ -55,13 +60,13 @@
       <div class="div1">
         <p>
           <b>WORK</b>    <br />    <br />
-        BRAND
+        <span class="subheader">BRAND</span>
         <br />
           <a href="carbon.html">Carbon Inc</a> <br />
           <a href="cve.html">Common Vulnerabilities and Exposures</a>  <br/>
         <a href="form.html">Form Energy</a> <br /><br />
 
-USER EXPERIENCE<br />
+<span class="subheader">USER EXPERIENCE</span><br />
 <a href="waygo-a.html">Waygo</a> <br/>
        <a href="acssa.html">Alameda County Social Services Portal</a> <br/>
        <a href="streetalk.html">StreeTalk: Public Installation in Palo Alto</a> <br/>
@@ -70,7 +75,7 @@ USER EXPERIENCE<br />
 
 
 <br />
-        WEB EXPERIMENTAL<br />
+        <span class="subheader">WEB EXPERIMENTAL</span><br />
             <a href="noguchi.html">Noguchi's Playscapes for SFMOMA</a> <br />
                     <a href="watching.html">Watching: Designing for Surveillance</a> <br />
           <a href="https://hosting-ivn.github.io/tiiime/">Tiiime: Typographic Clock</a> <br />
@@ -78,7 +83,7 @@ USER EXPERIENCE<br />
 
 
           <a href="cryptography.html">Cryptography 001 Publication</a> <br /><br />
-          OTHER<br />
+          <span class="subheader">OTHER</span><br />
           <a href="renders.html">Various 3D renderings / animations</a> <br />
             </div>
       <div class="div2">
