--- a/acssa.html
+++ b/acssa.html
@@ -102,7 +102,7 @@
 
           <!-- Row 4: Full -->
           <div class="media-box full">
-            <img src="assets/acssa/4.svg" alt="">
+            <img src="assets/acssa/4.png" alt="">
           </div>
         </div>
     </div>
