--- a/carbon.html
+++ b/carbon.html
@@ -139,9 +139,14 @@
             src="assets/carbon/uma-bottles.png"
             alt="Your Image Description"
           />
+          <img
+            class="image2"
+            src="assets/carbon/typography.png"
+            alt="Your Image Description"
+          />
 
           <video
-              class="image"
+              class="full-video"
               src="assets/carbon/lattice.webm"
               autoplay
               muted
@@ -149,11 +154,6 @@
             >
               Your browser does not support the video tag.
             </video>
-          <img
-            class="image"
-            src="assets/carbon/typography.png"
-            alt="Your Image Description"
-          />
 
 
         </div>
