--- a/carbon.html
+++ b/carbon.html
@@ -160,5 +160,7 @@
       </div>
       <!-- Add more images as needed -->
     </div>
+
+    <script src="lightbox.js"></script>
   </body>
 </html>
