--- a/cryptography.html
+++ b/cryptography.html
@@ -113,5 +113,6 @@ Project led by chris hamamoto<br/>
       </div>
       <!-- Add more images as needed -->
     </div>
+    <script src="lightbox.js"></script>
   </body>
 </html>
