--- a/fernweh.html
+++ b/fernweh.html
@@ -122,5 +122,6 @@ Yichen Liu
       </div>
       <!-- Add more images as needed -->
     </div>
+    <script src="lightbox.js"></script>
   </body>
 </html>
