--- a/form.html
+++ b/form.html
@@ -146,5 +146,6 @@ At Form Energy, I contributed to the development and refinement of the brand ide
       </div>
       <!-- Add more images as needed -->
     </div>
+    <script src="lightbox.js"></script>
   </body>
 </html>
