--- a/noguchi.html
+++ b/noguchi.html
@@ -80,5 +80,6 @@ Based on the works by Isamu Noguchi.
       </div>
       <!-- Add more images as needed -->
     </div>
+    <script src="lightbox.js"></script>
   </body>
 </html>
