--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <p>Please leave a message below.<br />
           <a href="mailto:contactivanchen@gmail.com">contactivanchen@gmail.com</a></p>
 
-          <p><a href="Ivan Chen - Resume - 01.17.2025.pdf" aria-label="Download Ivan Chen's resume PDF">Resume</a></p>
+          <p><a href="Ivan%20Chen%20-%20Resume%20-%2010.15.2025.pdf" aria-label="Download Ivan Chen's resume PDF">Resume</a></p>
         </section>
 
         <section aria-label="About Ivan Chen">
