--- a/cmc.html
+++ b/cmc.html
@@ -76,7 +76,7 @@
                 src="assets/cmc/cmc-loop.webm"
                 autoplay
                 muted
-                loop
+                loop playsinline
               >
             </video>
             <img
