--- a/form.html
+++ b/form.html
@@ -109,7 +109,7 @@ At Form Energy, I contributed to the development and refinement of the brand ide
                 src="assets/form/form-factory-panels.webm"
                 autoplay
                 muted
-                loop
+                loop playsinline
               >
                 Your browser does not support the video tag.
               </video>
@@ -118,7 +118,7 @@ At Form Energy, I contributed to the development and refinement of the brand ide
                   src="assets/form/form-posters.webm"
                   autoplay
                   muted
-                  loop
+                  loop playsinline
                 >
                   Your browser does not support the video tag.
                 </video>
@@ -127,7 +127,7 @@ At Form Energy, I contributed to the development and refinement of the brand ide
                     src="assets/form/form-posters-2.webm"
                     autoplay
                     muted
-                    loop
+                    loop playsinline
                   >
                     Your browser does not support the video tag.
                   </video>
