--- a/noguchi.html
+++ b/noguchi.html
@@ -74,6 +74,7 @@ Based on the works by Isamu Noguchi.
               autoplay
               muted
               loop
+              playsinline
             >
               Your browser does not support the video tag.
             </video>
