--- a/renders.html
+++ b/renders.html
@@ -71,7 +71,7 @@
             src="assets/renders/zendonut.webm"
             autoplay
             muted
-            loop
+            loop playsinline
           >
         </video>
             <video
@@ -79,7 +79,7 @@
                 src="assets/renders/bart.webm"
                 autoplay
                 muted
-                loop
+                loop playsinline
               >
             </video>
 
@@ -88,7 +88,7 @@
                   src="assets/renders/white-rabbit.webm"
                   autoplay
                   muted
-                  loop
+                  loop playsinline
                 >
               </video>
               <video
@@ -96,7 +96,7 @@
                   src="assets/renders/brutal.webm"
                   autoplay
                   muted
-                  loop
+                  loop playsinline
                 >
               </video>
               <img
