--- a/carbon-a.html
+++ b/carbon-a.html
@@ -73,6 +73,7 @@
               autoplay
               muted
               loop
+              playsinline
             >
               Your browser does not support the video tag.
             </video>
@@ -107,6 +108,7 @@
                 autoplay
                 muted
                 loop
+                playsinline
               >
                 Your browser does not support the video tag.
               </video>
@@ -148,6 +150,7 @@
               autoplay
               muted
               loop
+              playsinline
             >
               Your browser does not support the video tag.
             </video>
