--- a/carbon.html
+++ b/carbon.html
@@ -73,6 +73,7 @@
               autoplay
               muted
               loop
+              playsinline
             >
               Your browser does not support the video tag.
             </video>
@@ -107,6 +108,7 @@
                 autoplay
                 muted
                 loop
+                playsinline
               >
                 Your browser does not support the video tag.
               </video>
@@ -153,6 +155,7 @@
               autoplay
               muted
               loop
+              playsinline
             >
               Your browser does not support the video tag.
             </video>
