--- a/super.html
+++ b/super.html
@@ -74,6 +74,7 @@
               autoplay
               muted
               loop
+              playsinline
             >
               Your browser does not support the video tag.
             </video>
@@ -83,6 +84,7 @@
                 autoplay
                 muted
                 loop
+                playsinline
               >
                 Your browser does not support the video tag.
               </video>
