--- a/watching.html
+++ b/watching.html
@@ -74,6 +74,7 @@
               autoplay
               muted
               loop
+              playsinline
             >
               Your browser does not support the video tag.
             </video>
